@@ -112,7 +112,9 @@ var GLConfig = {
     refunds:'/refunds',//退款
     refunds_by_order_id:"/refunds/{{order_id}}/get_by_order_id",
     sale_product: "/saleproduct",   //获取特卖选品列表
-    change_hot_val: "/saleproduct/{{ id }}/change_hot_val"   //添加热度值
+    change_hot_val: "/saleproduct/{{ id }}/change_hot_val",   //添加热度值
+    hot_product: "/hotproduct",   //获取特卖选品列表
+    change_hot_pro_hot_val: "/hotproduct/{{ id }}/change_hot_val"   //添加热度值
 };
 
 // using jQuery
